objects/TestCase__c.object
<CustomObject>
    <label>Test Case</label>
    <pluralLabel>Test Cases</pluralLabel>
    <nameField>
        <label>Test Case Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>User Role</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>IntegrationPoint__c</fullName>
        <label>Integration Point</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>ScenarioType__c</fullName>
        <label>Scenario Type</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Traceability__c</fullName>
        <label>Traceability</label>
        <type>Text</type>
        <length>255</length>
    </fields>
</CustomObject>